Fix background images not showing on published build

--- a/src/app/lobby/lobby.component.scss
+++ b/src/app/lobby/lobby.component.scss
@@ -13,7 +13,7 @@
     z-index: 1;
     width: 100%;
     height: 100%;
-    background-image: url("/assets/lobby-bg.jpg");
+    background-image: url("~/src/assets/lobby-bg.jpg");
     background-size: cover;
     background-position: center;
     filter: blur(2px);
