--- a/src/app/run-history/run-history.component.scss
+++ b/src/app/run-history/run-history.component.scss
@@ -6,7 +6,7 @@
     z-index: 1;
     width: 100%;
     height: 100%;
-    background-image: url("/assets/lb-bg1.jpg");
+    background-image: url("~/src/assets/lb-bg1.jpg");
     background-size: cover;
     background-position: center;
     filter: blur(1px);
